# Diffusion

./: .gitignore  .pre-commit-config.yaml  Initial work.ipynb  README.md  experiment_faiss.ipynb  pyproject.toml
ReDi/: pipeline_re_sd.py  retrieve_val10.py
src/: Initial work.ipynb  combined.pt  prompts.jsonl  trajectories.h5  whole pipeline.ipynb
src/ReDi/: retrieve_redi.py  traj.py
src/data/: test_prompts.json
src/data/generated_data/: coco_prompts.jsonl  prompts.jsonl  trajectories.h5
src/data/knowledge_base/: knowledge_base.h5
src/data/reference_knowledge_base/: coco_prompts.json  prompts.json
src/data/results/: coco-metrics-num-neighbours_key-margin=0_dataset-size=10000_value-margin-steps=25.csv  coco-metrics-value-margin-steps-15_key-margin=0_dataset-size=10000_num-neighbours=1.csv  coco-metrics-value-margin-steps-20-25-27_key-margin=0_dataset-size=10000_num-neighbours=1.csv  coco-metrics-value-margin-steps_key-margin=0_dataset-size=10000_num-neighbours=1.csv  coco-precision@k_key-margin=0_dataset-size=10000.csv  coco-time_key-margin=0_dataset-size=20000.csv  time_key-margin=0_dataset-size=2000.csv  (+4 more)
src/metrics/: metrics.py
src/notebooks/: adaptive_skipping.ipynb  experiment_concept_mix.ipynb  experiment_faiss.ipynb  key_compression_synthetic.ipynb  neighbours_demo.ipynb  results_analysis.ipynb  whole pipeline.ipynb
src/redi/: generate_trajectory.py  index.py  knowledge_base.py  pipeline_re_sd.py  trajectory.py  utils.py
src/retrieval/: knowledge_base.py  pipeline_re_sd.py  trajectory.py
src/stable/: coco_furniture_images.ipynb  prompt.ipynb
(+22 files in other folders)
